Improve example gui apps